# byte

./: io.github.ellie_commons.byte.yml  meson.build
data/: Application.css  application.css  byte.desktop.in  byte.gresource.xml  byte.gschema.xml  byte.metainfo.xml.in  meson.build
src/: Application.vala  Config.vala.in  Enum.vala  MainWindow.vala  Util.vala
src/Objects/: Album.vala  Artist.vala  Track.vala
src/Services/: Database.vala  EventBus.vala  Indicator.vala  Library.vala  Player.vala  Scanner.vala  Settings.vala
src/Views/: Albums.vala  Home.vala  RecentlyAdded.vala  Tracks.vala  Welcome.vala
src/Widgets/: Accordion.vala  HeaderBar.vala  MediaControl.vala  MediaControlButtons.vala  MediaCover.vala  SeekBar.vala  Sidebar.vala  SidebarRow.vala  TrackChild.vala  TrackRow.vala  TrackWidget.vala
